k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  labels:
    app: todoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: chichia/mytodoapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8292
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
